- polishing MRSignMTKit, by adding tools and managers, services for camera, audio recognition, text normalization, videostatemanagement, scenario factories with their views

--- a/src/MRSignTranslate/MRSignTranslate/app/Info.plist
+++ b/src/MRSignTranslate/MRSignTranslate/app/Info.plist
@@ -20,10 +20,10 @@
 		</dict>
 	</dict>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>For speech recognition</string>
+	<string>$(PRODUCT_NAME) needs access to your microphone for speech recognition</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Speech recognition will be used to transcribe audio for translation</string>
+	<string>$(PRODUCT_NAME) needs access to speech recognition will be used to transcribe audio for translation</string>
 	<key>NSCameraUsageDescription</key>
-	<string>For sign language recognition</string>
+	<string>$(PRODUCT_NAME) needs access to your camera for sign language recognition</string>
 </dict>
 </plist>
