--- a/src/MRSignTranslate/MRSignTranslate/app/Info.plist
+++ b/src/MRSignTranslate/MRSignTranslate/app/Info.plist
@@ -2,11 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need access to your microphone to enable voice interactions and allow you to speak commands or provide input directly to the app.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We use speech recognition to provide a more interactive and hands-free experience by allowing you to speak directly to the app for certain actions or features</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationPreferredDefaultSceneSessionRole</key>
 		<string>UIWindowSceneSessionRoleApplication</string>
 		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UIApplicationSupportsTabbedSceneCollection</key>
 		<true/>
 		<key>UISceneConfigurations</key>
 		<dict>
@@ -19,11 +25,5 @@
 			</array>
 		</dict>
 	</dict>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your microphone for speech recognition</string>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to speech recognition will be used to transcribe audio for translation</string>
-	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs access to your camera for sign language recognition</string>
 </dict>
 </plist>
